# TuxMusic-desktop

./: README.md  index.html  package-lock.json  package.json  styles.css
.github/workflows/: 1.yaml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
